Fixed header paragraph shrinking too much

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ a {
 }
 
 #opening-left {
+    min-width: 300px;
     max-width: 500px;
 }
 
